added about us section

--- a/index.html
+++ b/index.html
@@ -45,6 +45,26 @@
 
             </div>
         </section>
+        <section><!--This Is About section-->
+            <h2 class="about-us-header">About Us</h2>
+            <div class="about">
+                
+                <div class="about-image">
+                    <img class="about-img" src="/images/section.png" alt="">
+
+                </div>
+                <div class="about-text">
+                    <h3 class="about-text-header">We grow brands through<br>
+                        bold & strategic creative</h3>
+                        <p class="about-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing.<br>
+                            Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                            <button class="about-btn">Contact With Us</button>
+
+                </div>
+
+            </div>
+
+        </section>
 
     </main>
     
